force-app/main/default/objects/LLC_BI__Valuation__c/LLC_BI__Valuation__c.object-meta.xml
<CustomObject>
    <description>The Valuation object tracks the status of a valuation associated with a draw request.</description>
    <label>Valuation</label>
    <nameField>
        <displayFormat>VAL-{000000000}</displayFormat>
        <label>Valuation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valuations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>