force-app/main/default/objects/LLC_BI__Valuation__c/fields/LLC_BI__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Completed_Date__c</fullName>
    <description>The date that this valuation was completed.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>